--- a/styles.css
+++ b/styles.css
@@ -38,8 +38,8 @@ main {
 }
 
 footer {
-    background-color: #333;
-    color: white;
+    background-color: #ff5454;
+    color: red;
     text-align: center;
     padding: 1em 0;
     position: fixed;
